--- a/src/Filter.css
+++ b/src/Filter.css
@@ -7,7 +7,8 @@
 }
 
 .filter_title{
-    font-size:1.2rem;
+    font-size:1.3rem;
+    font-weight:bold;
 }
 
 .line_seperator{
@@ -20,5 +21,5 @@
 
 .filter{
     padding:10px;
-    border-bottom: solid 1px gray;
+    margin-bottom: 10px !important;
 }
