Set color for max front and profit + Add remove button for mobile version

--- a/src/CarCalculation.css
+++ b/src/CarCalculation.css
@@ -1,3 +1,11 @@
 .remove_lender{
     color:red !important;
 }
+
+.positive{
+    color:green !important;
+}
+
+.negative{
+    color:red !important;
+}
