Format description table in DetailedCar component

--- a/src/components/DetailedCar.css
+++ b/src/components/DetailedCar.css
@@ -6,3 +6,15 @@
     transform: scale(1.005);
     box-shadow: 0 1px 5px grey;
 }
+
+.paddingLeft20Important{
+    padding-left:20px !important;
+}
+
+.car_description tr{
+    border:1px solid lightgrey;
+}
+
+.car_title{
+    font-size:1.5rem;
+}
